--- a/.github/workflows/trigger-vercel.yml
+++ b/.github/workflows/trigger-vercel.yml
@@ -3,7 +3,7 @@ name: Trigger Vercel Deployment
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       # 只在内容文件变化时触发
       - 'posts/**'
