--- a/.github/workflows/trigger-build.yml
+++ b/.github/workflows/trigger-build.yml
@@ -9,6 +9,7 @@ on:
   push:
     branches:
       - master  # 或你使用的主分支名称 (main/develop 等)
+  repository_dispatch:
     paths:
       # 只在内容文件变化时触发,避免不必要的构建
       - 'posts/**'
